Все работает Добавлен сервера авторзщации