@@ -1,25 +1,19 @@
-package sia.tacocloud.config;
+package sia.authserver.users;
 
-import lombok.AccessLevel;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-import lombok.RequiredArgsConstructor;
+import lombok.*;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import javax.persistence.Entity;
-import javax.persistence.GeneratedValue;
-import javax.persistence.GenerationType;
-import javax.persistence.Id;
+import javax.persistence.*;
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
-@Entity
 @Data
-@NoArgsConstructor(access = AccessLevel.PRIVATE, force = true)
+@Entity
 @RequiredArgsConstructor
-public class Human implements UserDetails {
+@NoArgsConstructor(access = AccessLevel.PRIVATE, force = true)
+public class User implements UserDetails{
     private static final long serialVersionUID = 1L;
     @Id
     @GeneratedValue(strategy = GenerationType.AUTO)
@@ -27,34 +21,46 @@ public class Human implements UserDetails {
 
     private final String username;
     private final String password;
-    private final String fullname;
-    private final String street;
-    private final String city;
-    private final String state;
-    private final String zip;
-    private final String phoneNumber;
+    private final String role;
 
     @Override
+    @Transient
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
+        return Collections.singletonList(new SimpleGrantedAuthority(role));
     }
 
     @Override
+    @Transient
+    public String getPassword() {
+        return password;
+    }
+
+    @Override
+    @Transient
+    public String getUsername() {
+        return username;
+    }
+
+    @Override
+    @Transient
     public boolean isAccountNonExpired() {
         return true;
     }
 
     @Override
+    @Transient
     public boolean isAccountNonLocked() {
         return true;
     }
 
     @Override
+    @Transient
     public boolean isCredentialsNonExpired() {
         return true;
     }
 
     @Override
+    @Transient
     public boolean isEnabled() {
         return true;
     }
